// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_oneLine__67z97xc styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap; --_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_false__67z97x8  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="styles_oneLine__67z97xg styles__67z97xf"
        >
          <div
            aria-controls="_r_1_"
            aria-describedby="_r_1_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_3_"
            aria-describedby="_r_3_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_false__67z97xj"
        >
          <button
            aria-expanded="false"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="styles_false__67z97xn styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_command__67z97xa"
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_9_"
            aria-describedby="_r_9_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_false__67z97xj"
        >
          <button
            aria-expanded="false"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="styles_false__67z97xn styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  styles_lines__67z97x9"
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_6_"
            aria-describedby="_r_6_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_false__67z97xj"
        >
          <button
            aria-expanded="false"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="styles_false__67z97xn styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copiedText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_oneLine__67z97xc styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap; --_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_false__67z97x8  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="styles_oneLine__67z97xg styles__67z97xf"
        >
          <div
            aria-controls="_r_i_"
            aria-describedby="_r_i_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copyText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_oneLine__67z97xc styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap; --_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_false__67z97x8  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="styles_oneLine__67z97xg styles__67z97xf"
        >
          <div
            aria-controls="_r_g_"
            aria-describedby="_r_g_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with custom number of rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--_67z97x0: 12;"
        >
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          />
        </pre>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_10_"
            aria-describedby="_r_10_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with hideText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_k_"
            aria-describedby="_r_k_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_false__67z97xj"
        >
          <button
            aria-expanded="false"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="styles_false__67z97xn styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_q_"
            aria-describedby="_r_q_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_true__67z97xi"
        >
          <button
            aria-expanded="true"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Hide 
              <svg
                class="styles_true__67z97xm styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with noExpandable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_true__67z97x4 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="styles__67z97x6 styles_multiline_true__67z97x7  "
          />
        </pre>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with showText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_n_"
            aria-describedby="_r_n_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_false__67z97xj"
        >
          <button
            aria-expanded="false"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Test 
              <svg
                class="styles_false__67z97xn styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_oneLine__67z97xc styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap; --_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_false__67z97x8  styles_command__67z97xa"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="styles_oneLine__67z97xg styles__67z97xf"
        >
          <div
            aria-controls="_r_c_"
            aria-describedby="_r_c_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_oneLine__67z97xc styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap; --_67z97x0: 4;"
        >
          <span
            class="styles__67z97x6 styles_multiline_false__67z97x8  styles_lines__67z97x9"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="styles_oneLine__67z97xg styles__67z97xf"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > should click on extend button to display full content on  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_multiline__67z97xd styles__67z97xb"
    >
      <div
        class="styles__67z97xe styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="true"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x5 styles_showMore_false__67z97x3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x7  "
            />
          </pre>
        </div>
        <div
          class="styles_multiline__67z97xh styles__67z97xf"
        >
          <div
            aria-controls="_r_t_"
            aria-describedby="_r_t_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="styles_true__67z97xi"
        >
          <button
            aria-expanded="true"
            class="styles__67z97xk"
            type="button"
          >
            <span
              class="styles__67z97xl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Hide 
              <svg
                class="styles_true__67z97xm styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
